HEN mode v4: Rafael's soul — 13 final improvements
Philosophy:
1. Fresh mint warm glow (amber, cools over 5min via CSS variable)
2. Block level in header ('block 12,153,212') instead of token count
3. Boot cut to 800ms (2 lines, not 5) + skip on re-entry
4. × close button removed — exit via Escape or 'exit' command
5. 'collect' not 'collect →' — quiet, no marketing
6. Timestamps count UP: '+5m' not '5m ago'
7. Header logo: 'hen' (full name stays on /hen/ landing)
8. Grid gap 2px (mosaic, tiles almost touching)

Technical:
9. First 4 thumbnails eager-loaded (no lazy-load on row 1)
10. 'nothing here yet.' for empty search results
11. 24px breathing room above title in expanded view
12. CLI command history (up-arrow, last 10 commands)
13. Boot plays once per session (sessionStorage flag)

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="manifest" href="site.webmanifest">
 
     <link rel="stylesheet" href="css/styles.min.css?v=20260301g">
-    <link rel="stylesheet" href="css/hen-mode.css?v=5">
+    <link rel="stylesheet" href="css/hen-mode.css?v=6">
     <script>
     // Instant blackout for HEN mode — prevents dashboard flash
     if (new URLSearchParams(window.location.search).has('hen')) {
@@ -1566,7 +1566,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     <!-- Load app as module -->
-    <script src="js/features/hen-mode.js?v=8"></script>
+    <script src="js/features/hen-mode.js?v=9"></script>
     <script type="module" src="js/core/app.js?v=20260301hen3"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
@@ -1737,7 +1737,7 @@
     <div id="hen-overlay" class="hen-overlay">
         <div id="hen-boot" class="hen-boot"></div>
         <div class="hen-header">
-            <div class="hen-logo"><span>hic</span> et nunc</div>
+            <div class="hen-logo">hen</div>
             <div id="hen-mint-count" class="hen-mint-count"></div>
             <button class="hen-close" title="Exit HEN mode">×</button>
         </div>
