feat: fill comparison data, first-visit tooltip tour, RPC for compare pages
- Comparison pages: fill Staking %, Annual Issuance, Nakamoto Coeff for Tezos
- Compare page now uses Octez RPC for live staking % (total_frozen_stake/total_supply)
- 3-step tooltip tour for first-time visitors (network stats, My Tezos, gear menu)
- Bump cache versions for config.js, compare-page.js, styles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
     <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.min.css?v=20260301g">
+    <link rel="stylesheet" href="css/styles.min.css?v=20260301h">
     <link rel="stylesheet" href="css/hen-mode.css?v=6">
     <script>
     // Instant blackout for HEN mode — prevents dashboard flash
@@ -1755,5 +1755,6 @@
             <div class="hen-expanded-inner"></div>
         </div>
     </div>
+    <script src="js/features/tooltip-tour.js?v=2" defer></script>
 </body>
 </html>
