--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#00d4ff">
     <link rel="manifest" href="site.webmanifest">
 
-    <link rel="stylesheet" href="css/styles.min.css?v=20260301h">
+    <link rel="stylesheet" href="css/styles.min.css?v=20260301i">
     <link rel="stylesheet" href="css/hen-mode.css?v=6">
     <script>
     // Instant blackout for HEN mode — prevents dashboard flash
@@ -59,7 +59,7 @@
     </script>
 
     <!-- Modulepreload critical JS for parallel fetch -->
-    <link rel="modulepreload" href="js/core/app.js?v=20260301rpc">
+    <link rel="modulepreload" href="js/core/app.js?v=20260301share">
     <link rel="modulepreload" href="js/core/api.js">
     <link rel="modulepreload" href="js/core/config.js">
     <link rel="modulepreload" href="js/core/utils.js">
@@ -1567,7 +1567,7 @@
 
     <!-- Load app as module -->
     <script src="js/features/hen-mode.js?v=11"></script>
-    <script type="module" src="js/core/app.js?v=20260301rpc"></script>
+    <script type="module" src="js/core/app.js?v=20260301share"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
