fix: cycle briefing regenerates every 4h or on 2% price drift
Previously cached per-cycle (never refreshed within ~24h cycle).
Now regenerates if >4 hours old OR XTZ price moved >2%.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </script>
 
     <!-- Modulepreload critical JS for parallel fetch -->
-    <link rel="modulepreload" href="js/core/app.js?v=20260301beacon">
+    <link rel="modulepreload" href="js/core/app.js?v=20260301beacon2">
     <link rel="modulepreload" href="js/core/api.js">
     <link rel="modulepreload" href="js/core/config.js">
     <link rel="modulepreload" href="js/core/utils.js">
@@ -1567,7 +1567,7 @@
 
     <!-- Load app as module -->
     <script src="js/features/hen-mode.js?v=11"></script>
-    <script type="module" src="js/core/app.js?v=20260301beacon"></script>
+    <script type="module" src="js/core/app.js?v=20260301beacon2"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
